# ==================================================================
#  tubex-lib - cmake configuration file
# ==================================================================

add_subdirectory(01_arithmetic)
add_subdirectory(02_simple_ctc)
add_subdirectory(03_ivp_msinx)
add_subdirectory(04_lissajous)