# ==================================================================
#  tubex-lib - cmake configuration file
# ==================================================================


add_subdirectory(01_arithmetic)
add_subdirectory(02_arithmetic_ctc)
add_subdirectory(03_integ_msinx)
add_subdirectory(04_causal_chain)
add_subdirectory(05_lissajous)