# ==================================================================
#  tubex-lib - cmake configuration file
# ==================================================================


#add_subdirectory(01_arithmetic)
#add_subdirectory(08_solver_01_picard)
add_subdirectory(08_solver_02_xmsin_fwd)
#add_subdirectory(08_solver_03_xmsin_bwd)
add_subdirectory(08_solver_04_bvp)
#add_subdirectory(08_solver_05_delay)
#add_subdirectory(08_solver_06_bvp_delay)
#add_subdirectory(08_solver_07_path_planning)
add_subdirectory(08_solver_08_integro_diff)

#add_subdirectory(02_arithmetic_ctc)
#add_subdirectory(03_integ_msinx)
#add_subdirectory(04_causal_chain)
#add_subdirectory(05_lissajous)
#add_subdirectory(06_lowcost_beacons)
#add_subdirectory(07_drifting_clock)
#add_subdirectory(xx_memory)