# ==================================================================
#  tubex-lib - cmake configuration file
# ==================================================================

#add_subdirectory(01_causal_chain)
#add_subdirectory(02_lowcost_beacons)
#add_subdirectory(03_drifting_clock)
add_subdirectory(04_redermor_trajectory)
add_subdirectory(05_data_association)