# ==================================================================
#  tubex-lib - cmake configuration file
# ==================================================================

add_subdirectory(01_picard)
#add_subdirectory(02_xmsin_fwd)
#add_subdirectory(03_xmsin_bwd)
add_subdirectory(04_bvp)
#add_subdirectory(05_delay)
#add_subdirectory(06_bvp_delay)
#add_subdirectory(07_integro_diff)
#add_subdirectory(08_bvp_delay_2d)
#add_subdirectory(09_csdp)
#add_subdirectory(10_large_initvalue)