# ==================================================================
#  tubex-3rd - cmake configuration file
# ==================================================================

list(APPEND SRC ${CMAKE_CURRENT_SOURCE_DIR}/pyibex/pyibex_Catan2.h
                ${CMAKE_CURRENT_SOURCE_DIR}/pyibex/pyibex_CtcPolar.cpp
                ${CMAKE_CURRENT_SOURCE_DIR}/pyibex/pyibex_CtcPolar.h
                ${CMAKE_CURRENT_SOURCE_DIR}/pyibex/pyibex_predefined.h
                )
set (LIB_3RD ${IBEX_LDFLAGS} ${TUBEX_LDFLAGS})

if (WITH_CAPD)
  list(APPEND SRC_CAPD ${CMAKE_CURRENT_SOURCE_DIR}/Capd2Tubex/json.hpp
                       ${CMAKE_CURRENT_SOURCE_DIR}/Capd2Tubex/tubex_Capd2Tubex.cpp
                       ${CMAKE_CURRENT_SOURCE_DIR}/Capd2Tubex/tubex_Capd2Tubex.h)
  set (LIB_3RD_CAPD ${LIB_3RD} ${PKG_CAPD_LDFLAGS})
endif()


################################################################################
# Create the target for libtubex-3rd
################################################################################

add_library(tubex-3rd ${SRC})
target_compile_options(tubex-3rd PUBLIC ${TUBEX_CFLAGS})

# todo: find a clean way to access tubex header files?
set(TUBEX_HEADERS_DIR ${CMAKE_CURRENT_BINARY_DIR}/../../include)
file(MAKE_DIRECTORY ${TUBEX_HEADERS_DIR})

target_include_directories(tubex-3rd SYSTEM PUBLIC ${IBEX_INCLUDE_DIRS})
target_include_directories(tubex-3rd PUBLIC ${TUBEX_HEADERS_DIR}
                                            ${CMAKE_CURRENT_SOURCE_DIR}/pyibex)
target_link_libraries(tubex-3rd PUBLIC ${LIB_3RD})

################################################################################
# Create the target for libtubex-3rd-capd
################################################################################
if (WITH_CAPD)
  add_library(tubex-3rd-capd ${SRC_CAPD})
  target_compile_options(tubex-3rd-capd PUBLIC ${TUBEX_CFLAGS})

  # todo: find a clean way to access tubex header files?
  set(TUBEX_HEADERS_DIR ${CMAKE_CURRENT_BINARY_DIR}/../../include)
  file(MAKE_DIRECTORY ${TUBEX_HEADERS_DIR})

  #target_include_directories(tubex-3rd-capd SYSTEM PUBLIC ${IBEX_INCLUDE_DIRS})

  list(APPEND 3RD_CAPD_INCLUDE_DIRS ${IBEX_INCLUDE_DIRS}
    ${TUBEX_HEADERS_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/Capd2Tubex)
  message(STATUS "${3RD_CAPD_INCLUDE_DIRS}")
  #target_include_directories(tubex-3rd-capd PUBLIC ${TUBEX_HEADERS_DIR}
  #                                                 ${CMAKE_CURRENT_SOURCE_DIR}/Capd2Tubex)
  target_include_directories(tubex-3rd-capd PUBLIC ${3RD_CAPD_INCLUDE_DIRS})
target_link_libraries(tubex-3rd-capd PUBLIC ${LIB_3RD_CAPD})
endif()


################################################################################
# Installation of libtubex-3rd files (and libtubex-3rd-capd if desired)
################################################################################

foreach(srcfile ${SRC})
  if(srcfile MATCHES "\\.h$" OR srcfile MATCHES "\\.hpp$")
    list(APPEND HDR ${srcfile})
    file(COPY ${srcfile} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../../include)
  endif()
endforeach()

# Generates a tubex-3rd.h file
set(TUBEX_3RD_MAIN_HEADER ${CMAKE_CURRENT_BINARY_DIR}/tubex-3rd.h)
file(WRITE ${TUBEX_3RD_MAIN_HEADER} "/* This file is generated by CMake */\n\n")
file(APPEND ${TUBEX_3RD_MAIN_HEADER} "#ifndef __TUBEX_3RD_H__\n#define __TUBEX_3RD_H__\n\n")
foreach(header_path ${HDR})
  get_filename_component(header_name ${header_path} NAME)
  file(APPEND ${TUBEX_3RD_MAIN_HEADER} "#include <${header_name}>\n")
endforeach()
file(APPEND ${TUBEX_3RD_MAIN_HEADER} "\n#endif /* __TUBEX_3RD_H__ */\n")
file(COPY ${TUBEX_3RD_MAIN_HEADER} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../../include)


if(WITH_CAPD)
  foreach(srcfile_CAPD ${SRC_CAPD})
    if(srcfile_CAPD MATCHES "\\.h$" OR srcfile MATCHES "\\.hpp$")
      list(APPEND HDR_CAPD ${srcfile_CAPD})
      file(COPY ${srcfile_CAPD} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../../include)
    endif()
  endforeach()

  # Generates a tubex-3rd-capd.h file
  set(TUBEX_3RD_CAPD_MAIN_HEADER ${CMAKE_CURRENT_BINARY_DIR}/tubex-3rd-capd.h)
  file(WRITE ${TUBEX_3RD_CAPD_MAIN_HEADER} "/* This file is generated by CMake */\n\n")
  file(APPEND ${TUBEX_3RD_CAPD_MAIN_HEADER} "#ifndef __TUBEX_3RD_CAPD_H__\n#define __TUBEX_3RD_CAPD_H__\n\n")
  foreach(header_path_CAPD ${HDR_CAPD})
    get_filename_component(header_name_CAPD ${header_path_CAPD} NAME)
    file(APPEND ${TUBEX_3RD_CAPD_MAIN_HEADER} "#include <${header_name_CAPD}>\n")
  endforeach()
  file(APPEND ${TUBEX_3RD_CAPD_MAIN_HEADER} "\n#endif /* __TUBEX_3RD_CAPD_H__ */\n")
  file(COPY ${TUBEX_3RD_CAPD_MAIN_HEADER} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../../include)
endif()



# Install files in system directories
install(TARGETS tubex-3rd DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(FILES ${HDR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tubex-3rd)
install(FILES ${TUBEX_3RD_MAIN_HEADER} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tubex-3rd)

if (WITH_CAPD)
  install(TARGETS tubex-3rd-capd DESTINATION ${CMAKE_INSTALL_LIBDIR})
  install(FILES ${HDR_CAPD} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tubex-3rd-capd)
  install(FILES ${TUBEX_3RD_CAPD_MAIN_HEADER} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tubex-3rd-capd)
endif ()

